--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,17 +3,17 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: darkgray;
     font-size: 14px;
-    background-image: url("/assets/images/reclaimedwoodbackground1000px.jpg");
-    background-position: 50% 50%;
-    background-repeat: repeat;
-    }
+    background-image: url("../../assets/images/reclaimedwoodbackground1000px.jpg");
+    background-size: cover;
+}
 
 a{
     color: grey;
     font-size: 15px;
 }
+
 .siteheader {
-    background: rgb(88, 71, 50)
+    background: rgba(8, 8, 8, 0.75);
 
 }
 
@@ -26,6 +26,7 @@ a{
     font-size: 17px;
     float: left;
 }
+
 .topnav{
     
     position: fixed;
@@ -37,11 +38,10 @@ a{
     margin-right: 10px;
 
 }
+
 .topnav a:hover {
     color: red;   
 }
-
-
 
 h1{
     font-family: Courier New, Courier, monospace;
@@ -49,24 +49,27 @@ h1{
     font-weight: bold;
 
 }
+
 h2{
     font-size: 18px;
     font-family: Courier New, Courier, monospace;
     font-style: italic;
 }
+
 #name{
     text-align: center;
     margin-left: 150px;
     background: black;
     width: 25%;
     height: 40px auto;
-    padding: 20px;
+    padding: 20px;    
 }
-
 
 #bio-image {
     width: 200px;
     padding: 10px 5px 5px 0;
+    margin: 20px;
+    float: left;
 }
 
 .container{
@@ -74,16 +77,20 @@ h2{
 }
 
 #about {
-    max-width: 650px;
-    margin: auto;
-    background: rgb(119, 113, 113);
+    width: 50%;
+    
+    float: left;
+    background: rgba(8, 8, 8, 0.75);
+    margin-top: 100px;
+    margin-left: 50px;
 }
 
 #connect {
-    max-width: 270px;
-    margin: auto;
+    width: 25%;
+    margin-top: 100px;
+    margin-right: 50px;
     float: right;
-    background: rgb(119, 113, 113);
+    background: rgba(8, 8, 8, 0.75);
     color: black;
 }
 
@@ -96,6 +103,7 @@ h2{
     float: left;
 
 }
+
 .pagefooter {
     position: fixed;
     bottom: 0;
@@ -103,8 +111,20 @@ h2{
     width: 100%;
     height: 100px;
     text-align: center;
-    background: rgb(88, 71, 50)
+    background: rgba(8, 8, 8, 0.75);
+    margin: 20 auto;
 }
+
 .pagefooter a:hover {
     color: red;   
+}
+
+#contact-info{
+    padding: 30px;
+}
+
+#about-text{
+    color: red;
+    border-bottom: 10px;
+    border-bottom-color: white;
 }
