--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,30 +17,42 @@ a{
 
 }
 
+.about-nav,
+.portfolio-nav,
+.contact-nav a:hover{
+
+}
+
+#github{
+    size: 50px;
+}
+
+#bio-text{
+    padding: 30px 20px 20px 0px;
+}
 .topnav a {
     font-family: Courier New, Courier, monospace;
     display: block;
-    color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0px 30px;
     font-size: 17px;
     float: left;
+    line-height: 68px;
 }
 
 .topnav{
-    
     position: fixed;
     top: 0;
     right: 0;
     text-align: center;
-    padding: 20px 5px;
     height: 40px auto;
-    margin-right: 10px;
-
+    margin-right: 0;
+    
 }
 
 .topnav a:hover {
-    color: red;   
+    color: red; 
+    background: black;  
 }
 
 h1{
@@ -86,23 +98,18 @@ h2{
 }
 
 #connect {
-    width: 25%;
+    width: 35%;
     margin-top: 100px;
     margin-right: 50px;
     float: right;
     background: rgba(8, 8, 8, 0.75);
-    color: black;
+    color: red;
 }
 
 #connect a:hover {
     color: red;   
 }
 
-#bio-text,
-#bio-image, {
-    float: left;
-
-}
 
 .pagefooter {
     position: fixed;
@@ -120,7 +127,7 @@ h2{
 }
 
 #contact-info{
-    padding: 30px;
+    padding: 40px 0px 0px 0px;
 }
 
 #about-text{
