--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: darkgray;
-    font-size: 14px;
+    font-size: 16px;
     background-image: url("../../assets/images/reclaimedwoodbackground1000px.jpg");
     background-size: cover;
 }
@@ -17,11 +17,6 @@ a{
 
 }
 
-.about-nav,
-.portfolio-nav,
-.contact-nav a:hover{
-
-}
 
 #github{
     size: 50px;
@@ -29,6 +24,12 @@ a{
 
 #bio-text{
     padding: 30px 20px 20px 0px;
+}
+
+#about-text{
+    margin: auto;
+    width: auto;
+    padding: 30px;
 }
 .topnav a {
     font-family: Courier New, Courier, monospace;
@@ -38,6 +39,8 @@ a{
     font-size: 17px;
     float: left;
     line-height: 68px;
+    color: white;
+    text-decoration: none;
 }
 
 .topnav{
@@ -63,14 +66,15 @@ h1{
 }
 
 h2{
-    font-size: 18px;
+    font-size: 22px;
     font-family: Courier New, Courier, monospace;
     font-style: italic;
+    background: black;
 }
 
 #name{
     text-align: center;
-    margin-left: 150px;
+    margin-left: 100px;
     background: black;
     width: 25%;
     height: 40px auto;
@@ -90,26 +94,33 @@ h2{
 
 #about {
     width: 50%;
-    
     float: left;
     background: rgba(8, 8, 8, 0.75);
-    margin-top: 100px;
-    margin-left: 50px;
+    margin-top: 80px;
+    margin-left: 100px;
 }
 
 #connect {
-    width: 35%;
-    margin-top: 100px;
+    width: 25%;
+    margin-top: 80px;
     margin-right: 50px;
     float: right;
     background: rgba(8, 8, 8, 0.75);
     color: red;
 }
 
-#connect a:hover {
-    color: red;   
-}
 
+.connect-h1 {
+    margin: auto;
+    width: auto;
+    padding: 30px;
+}
+.icons {
+    margin: auto;
+    width: 52%;
+    
+    padding: 40px;
+}
 
 .pagefooter {
     position: fixed;
@@ -118,7 +129,7 @@ h2{
     width: 100%;
     height: 100px;
     text-align: center;
-    background: rgba(8, 8, 8, 0.75);
+    background: black;
     margin: 20 auto;
 }
 
@@ -134,4 +145,27 @@ h2{
     color: red;
     border-bottom: 10px;
     border-bottom-color: white;
+}
+
+/*css for contact page*/
+
+.contact-form{
+    width: 90%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 20px;
+    
+}
+
+input {
+    width: 100%;
+    
+}
+
+.button{
+    width: 25%;
+    height: 40px;
+    background: red;
+    color: white;
+    margin: 0px 0px 15px 20px;
 }
